# FuncterTestWithLena

./: CMakeLists.txt
include/: ImageManager.h  header.h
src/: ImageManager.cpp  main.cpp
